--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -181,6 +181,17 @@ html {
   opacity: 1;
 }
 
+@media screen and (max-width: 300px) {
+  
+  .project-one:hover .overlay, .project-two:hover .overlay, 
+  .project-three:hover .overlay, .project-four:hover .overlay, 
+  .project-five:hover .overlay, .project-six:hover .overlay {
+    width: 80%;   /* cover right half */
+    height: 90%; /* full height */
+  }
+
+}
+
 
 /* About Page Styling */
 .about-page {
@@ -241,4 +252,13 @@ html {
       background-size: cover;
       background-repeat: no-repeat;
     }
+}
+
+
+/* FAQ PAGE STYLING */
+.faq-page {
+  background-image: url("../../public/img/FAQ/image.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
