today workdone 04-09-2025 | 6:29 pm

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -262,3 +262,7 @@ html {
   background-size: cover;
   background-position: center;
 }
+
+.faq-section-three {
+  background-position: center 12vw;
+}
