--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,14 +69,14 @@ html {
 
 /* Section Four Styling */
 .animate-slide div {
-  box-shadow: 0px 14px 10px rgba(0, 0, 0, 0.187), 
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.187), 
               -2px 0px 6px rgba(0, 0, 0, 0.187), 
                2px 0px 6px rgba(0, 0, 0, 0.187);
 }
 
 
 .animate-slide {
-  animation: slide 6s ease-in-out infinite;
+  animation: slide 6s ease infinite;
 }
 
 @keyframes slide {
